remvoing center align text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Mukul Taneja - Personal Website</title>
+    <title>Mukul Taneja</title>
     <meta name="copyright" content="This site belongs to Mukul Taneja and entirely based on his introduction to the world." />
     <meta name="description" content="This site is related to Mukul Taneja and introduction of himself. This site describes about Mukul Taneja and his programming skills, primary interests
-		,his projects and his contact informations over internet." />
+	,his projects and his contact informations over internet." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Mukul Taneja" />
     <meta http-equiv="cache-control" content="max-age=86400" />
@@ -122,11 +122,11 @@
                     <div class="about-me-heading">
                         <h2 class="text-center">
 								About Me
-							</h2>
+						</h2>
                     </div>
                     <div class="about-me-text">
                         <blockquote>
-                            <p class="text-center">
+                            <p>
                                 To make things work is such an exciting thing, and that is what I always want to play with. Thinking like a programmer and realizing the power of science and technology in every step is what I enjoy to the core. This introduces a desire to learn something new, more and make things magnificent. Simple and clear thoughts lead to great ideas, and I believe I have a long way to go.
                             </p>
                             <p class="text-center">
@@ -141,14 +141,14 @@
             <!-- skills section of main page-->
             <div class="container skills" id="skills">
                 <div class="col-md-12 col-xs-12 skill-heading">
-                    <h2 class="text-center">
+                    <h2>
 							Programming Skills
-						</h2>
+					</h2>
                 </div>
                 <div class="col-md-12 col-xs-12">
                     <blockquote>
                         <p class="text-center">
-                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer but got my first desktop in the first year of my college and after that I forgot how to close it :). I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
+                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer and I got my first desktop in the first year of my college and after that I forgot how to close it :). I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
                         </p>
                     </blockquote>
                 </div>
@@ -158,9 +158,9 @@
             <!-- contact section of main page-->
             <div class="container contact-me" id="contact-me">
                 <div class="col-md-12 col-xs-12 contact-me-heading">
-                    <h2 class="text-center">
+                    <h2>
 							Contact Me
-						</h2>
+					</h2>
                 </div>
                 <div class="col-md-12 col-xs-12 contact-me-text">
                     <blockquote>
