--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-md-12 col-xs- 12">
                     <div class="about-me-heading">
                         <h2 class="text-center">
-								About Me
+							About Me
 						</h2>
                     </div>
                     <div class="about-me-text">
@@ -141,30 +141,33 @@
             <!-- skills section of main page-->
             <div class="container skills" id="skills">
                 <div class="col-md-12 col-xs-12 skill-heading">
-                    <h2>
-							Programming Skills
+                    <h2 class="text-center">
+						Programming Skills
 					</h2>
                 </div>
-                <div class="col-md-12 col-xs-12">
+                <div class="col-md-12 col-xs-12 skills-text">
                     <blockquote>
-                        <p class="text-center">
-                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer and I got my first desktop in the first year of my college and after that I forgot how to close it :). I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
+                        <p>
+                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer and I got my first desktop in the first year of my college and after that I forgot how to close it :).
+                        </p>
+                        <p>
+                            I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
                         </p>
                     </blockquote>
                 </div>
-                <div class="col-md-12 col-xs-12 skills-text">
+                <div class="col-md-12 col-xs-12 skills">
                 </div>    
             </div>
             <!-- contact section of main page-->
             <div class="container contact-me" id="contact-me">
                 <div class="col-md-12 col-xs-12 contact-me-heading">
-                    <h2>
-							Contact Me
+                    <h2 class="text-center">
+						Contact Me
 					</h2>
                 </div>
                 <div class="col-md-12 col-xs-12 contact-me-text">
                     <blockquote>
-                        <p class="text-center">
+                        <p>
                             Ideas are the coolest raw materials with which great things mark their existence. I would like to discuss and work with you for any of your bright ideas, and also try to add upon them. Also, writing you answering your queries or doubts would tickle my mind and refresh it. Do post your queries/doubts/suggestions on any of the following social media profiles of mine.
                         </p>
                     </blockquote> 
