autoload the visuals

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                         </blockquote>
                     </div>
                     <div class="about-me-content">
+                        <svg></svg>
                     </div>
                 </div>
             </div>
@@ -156,6 +157,7 @@
                     </blockquote>
                 </div>
                 <div class="col-md-12 col-xs-12 skills">
+                    <svg></svg>
                 </div>    
             </div>
             <!-- contact section of main page-->
