updating transitions in visuals

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                 <div class="col-md-12 col-xs-12 skills-text">
                     <blockquote>
                         <p>
-                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer and I got my first desktop in the first year of my college and after that I forgot how to close it :).
+                            Computers and programming caught my eye during my high school until when I had never powered that fancy device on. Once it beamed, I think I have forgotten how should I shut it off. And from there budded my interest in understanding and solving various problems through coding.
                         </p>
                         <p>
-                            I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
+                            My curiosity grew with every passing day and that drove me to learn various technologies and tools. Here I describe my learning so far and the extent of ease I possess with each of them.
                         </p>
                     </blockquote>
                 </div>
