adding resume section in the index page

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <span>Resume</span>
+                    <a href="resume/resume.pdf" target="_blank">
+                        <span>My Resume</span>
                     </a>
                 </li>
                 <li>
