adding social buttons

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Mukul Taneja</title>
     <meta name="copyright" content="This site belongs to Mukul Taneja and entirely based on his introduction to the world." />
-    <meta name="description" content="This site is related to Mukul Taneja and introduction of himself. This site describes about Mukul Taneja and his programming skills, primary interests
-	,his projects and his contact informations over internet." />
+    <meta name="description" content="It is a web page which comprises information belongs to Mukul Taneja. Mukul Taneja is the only person who owns this page and this page contains information such as his primary interest, 
+    his background, his skills and his contact details over internet." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Mukul Taneja" />
     <meta http-equiv="cache-control" content="max-age=86400" />
+    <meta property="og:url" content="https://http://mukultaneja.github.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mukul Taneja"/>
+    <meta property="og:description" content="A simple web page which describes professional life of Mukul Taneja" />
+    <meta property="og:image" content="https://http://mukultaneja.github.io/images/favicon.png" />
     <link rel="shortcut icon" href="images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -82,9 +87,20 @@
                     </center>
                 </div>
             </div>
-            <div class="container">
+            <div class="container social-media-buttons">
                 <div class="col-md-12 col-xs-12" style="position: relative; top: 10px">
-                    <div class="col-md-7 col-xs-7"></div>
+                    <div class="col-md-7 col-xs-7" style="padding: 0px">
+                        <div class="col-md-2 col-xs-2" style="padding: 0px">
+                            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmukultaneja.github.io&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                        </div>
+                        <div class="col-md-2 col-xs-2">
+                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://mukultaneja.github.io" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="col-md-3 col-xs-3">
+                            <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+                            <script type="IN/Share" data-url="https://mukultaneja.github.io" data-counter="right"></script>
+                        </div>
+                    </div>
                     <div class="col-md-5 col-xs-5" style="padding: 0px">
                         <div class="col-md-4 col-xs-4">
                             <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FMac.theCreator&width=63&height=65&layout=button&size=small&show_faces=true&appId" height="20" style="border:none;overflow:hidden;width: 70px;position: relative;left: 66%;" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
