disabling fb share button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="col-md-12 col-xs-12" style="position: relative; top: 10px">
                     <div class="col-md-7 col-xs-7" style="padding: 0px">
                         <div class="col-md-2 col-xs-2" style="padding: 0px">
-                            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmukultaneja.github.io&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                            <!--iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmukultaneja.github.io%2F&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe-->
                         </div>
                         <div class="col-md-2 col-xs-2">
                             <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://mukultaneja.github.io" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
