--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Mukul Taneja" />
     <meta http-equiv="cache-control" content="max-age=86400" />
-    <meta property="og:url" content="https://http://mukultaneja.github.io" />
+    <meta property="og:url" content="http://mukultaneja.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mukul Taneja"/>
     <meta property="og:description" content="A simple web page which describes professional life of Mukul Taneja" />
-    <meta property="og:image" content="https://http://mukultaneja.github.io/images/favicon.png" />
+    <meta property="og:image" content="http://mukultaneja.github.io/images/favicon.png" />
     <link rel="shortcut icon" href="images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -90,8 +90,8 @@
             <div class="container social-media-buttons">
                 <div class="col-md-12 col-xs-12" style="position: relative; top: 10px">
                     <div class="col-md-7 col-xs-7" style="padding: 0px">
-                        <div class="col-md-2 col-xs-2" style="padding: 0px">
-                            <!--iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmukultaneja.github.io%2F&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe-->
+                        <div class="col-md-2 col-xs-2" style="padding: 0px">    
+                            <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fmukultaneja.github.io%2F&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                         </div>
                         <div class="col-md-2 col-xs-2">
                             <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://mukultaneja.github.io" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
