modifying behavior for resume link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="resume/resume.pdf" target="_blank">
+                    <a href="resume/resume.pdf" class="resume" target="_blank">
                         <span>My Resume</span>
                     </a>
                 </li>
