adding new articles

--- a/blog.html
+++ b/blog.html
@@ -22,9 +22,25 @@
 		<hr />
 		<div class="row blog-title">
 			<div class="container">
-				<div class="col-md-12 col-xs-12 cdac">
+				<div class="col-md-12 col-xs-12 blogs">
+					<a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="_blank.html">
+						Presentation on : Big Data And Visualization - 8th July 2016
+					</a>
+				</div>
+			</div>
+			<br />
+			<div class="container">
+				<div class="col-md-12 col-xs-12 blogs">
 					<a href="cdac-training/presentation.html" target="_blank.html">
-						CDAC - D3 Traning Presentation
+						CDAC - D3 Traning Presentation - 17th Dec 2016
+					</a>
+				</div>
+			</div>
+			<br />
+			<div class="container">
+				<div class="col-md-12 col-xs-12 blogs">
+					<a href="https://www.hackerearth.com/year-in-review/2016/mac.thecreator/share/295f68e5916b/" target="_blank.html">
+						Hacker Earth Year Review - 31th Dec 2016
 					</a>
 				</div>
 			</div>
