adding analysis link in blog.html

--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,13 @@
 					</a>
 				</div>
 			</div>
+			<div class="container">
+				<div class="col-md-12 col-xs-12 blogs">
+					<a href="analysis/student-alcohol-consumption.html" target="_blank.html">
+						Analysis - Student Alcohol Consumption
+					</a>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
