adding text to talks & rewards section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
                             Talks & Rewards
                         </h2>
                 </div>
+                <div class="col-md-12 col-xs-12 skills-text">
+                    <blockquote>
+                        <p>
+                            With the idea of keeping pace with what I do, I have got few opportunities to share my knowledge.
+                            The links below will walk you through the talks I have delivered and the contests i have taken part in.
+                        </p>
+                    </blockquote>
+                </div>
                 <div class="col-md-12 col-xs-12 rewards-div">
                     <div class="col-md-3 col-xs-3">
                         <a href="https://speakerdeck.com/mukultaneja/big-data-visualization" target="_blank.html">
