--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/style.css" />
 		<title> Blogs Archive </title>
 	</head>
-	<body>
+	<body style="font-family: cursive;">
 		<div class="row blog-header">
 			<div class="col-md-12 col-xs-12">
 				<h2 class="text-center"> Blog Archives </h2>
@@ -21,12 +21,23 @@
 		</div>
 		<hr />
 		<div class="row blog-title">
-			<div class="container">
-				<div class="col-md-12 col-xs-12 blogs">
-					<a href="analysis/student-alcohol-consumption.html" target="_blank.html">
-						Analysis - Student Alcohol Consumption
-					</a>
-				</div>
+			<div class="container rewards-div">
+				<div class="col-md-3 col-xs-3">
+                    <a href="https://www.kaggle.com/mukultaneja/analysis-student-alcohol-consumption" target="_blank.html">
+                        <img src="images/students.jpg" class="talk-images" />
+                        <figcaption class="caption" style="left: 25px; font-size: 11px; top: 30px">
+                            Analysis - Student Alcohol Consumption
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-3" style="margin-left: 50px">
+                    <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
+                        <img src="images/edx.png" class="talk-images" />
+                        <figcaption class="caption" style="left: 3px; font-size: 11px; top: 30px">
+                            Analysis - Online Courses from Harvard and MIT
+                        </figcaption>
+                    </a>
+                </div>
 			</div>
 		</div>
 	</body>
