--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </center>
                 </div>
             </div>
-            <div class="container social-media-buttons">
+            <!-- div class="container social-media-buttons">
                 <div class="col-md-12 col-xs-12" style="position: relative; top: 10px;">
                     <div class="col-md-7 col-xs-7" style="padding: 0px">
                         <div class="col-md-2 col-xs-2">
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-md-4 col-xs-4" style="position: relative; right: 11px;">
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/mukultaneja" aria-label="Follow @mukultaneja on GitHub">Follow @mukultaneja</a>
+                            <!--a class="github-button" href="https://github.com/mukultaneja" aria-label="Follow @mukultaneja on GitHub">Follow @mukultaneja</a>
                         </div>
                         <div class="col-md-4 col-xs-4">
                             <a href="https://twitter.com/thecuriousmukul" class="twitter-follow-button" data-show-count="false">Follow</a>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div -->
             <!-- home section of main page-->
             <div class="container home">
                 <div class="col-md-12 col-xs-12">
