adding new post and article to blog page

--- a/blog.html
+++ b/blog.html
@@ -31,10 +31,26 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-3" style="margin-left: 50px">
+                    <a href="https://www.kaggle.com/mukultaneja/mcdonald-s-food-analysis" target="_blank.html">
+                        <img src="images/burger.jpg" class="talk-images" />
+                        <figcaption class="caption" style="left: 60px; font-size: 11px; top: 30px">
+                            Mcdonald's Food Analysis
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-3" style="margin-left: 50px">
                     <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
                         <img src="images/edx.png" class="talk-images" />
                         <figcaption class="caption" style="left: 3px; font-size: 11px; top: 30px">
                             Analysis - Online Courses from Harvard and MIT
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-3" style="top: 20px;">
+                    <a href="https://medium.com/@mukultaneja/automated-job-performing-queue-system-using-python-a7e94e4e3526" target="_blank.html">
+                        <img src="images/article.jpg" class="talk-images" />
+                        <figcaption class="caption" style="left: 17px; font-size: 11px; top: 30px">
+                            Automated Job Performing Queue System
                         </figcaption>
                     </a>
                 </div>
