updating resume and designation

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <center>
                         <img src="images/mukul.png" alt="mukul" class="me img-responsive" />
                         <figcaption class="figure-caption tag-class">
-                            <b>Data Specialist, Gramener</b>
+                            <b>Senior Data Specialist, Gramener</b>
                         </figcaption>
                     </center>
                 </div>
