updating blog page with latest links

--- a/blog.html
+++ b/blog.html
@@ -11,50 +11,48 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="css/style.css" />
-		<title> Blogs Archive </title>
+		<title> Mukul Taneja's Blogs </title>
 	</head>
-	<body style="font-family: cursive;">
-		<div class="row blog-header">
-			<div class="col-md-12 col-xs-12">
-				<h2 class="text-center"> Blog Archives </h2>
-			</div>
-		</div>
-		<hr />
-		<div class="row blog-title">
-			<div class="container rewards-div">
-				<div class="col-md-3 col-xs-3">
+	<body>
+        <!-- Page Content -->
+        <div class="page-content-wrapper">
+    		<div class="container header">
+    			<div class="col-md-12 col-xs-12">
+                    <h2 class="text-center">Mukul Taneja - Blogs</h2>
+                    <hr />
+                </div>
+    		</div>
+            <div class="container">
+                <div class="col-md-12 years">
+                    <h3>2017</h3>
+                </div>
+                <hr />
+    			<div class="col-md-12 col-xs-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/analysis-student-alcohol-consumption" target="_blank.html">
-                        <img src="images/students.jpg" class="talk-images" />
-                        <figcaption class="caption" style="left: 25px; font-size: 11px; top: 30px">
-                            Analysis - Student Alcohol Consumption
-                        </figcaption>
+                        Analysis - Student Alcohol Consumption
                     </a>
                 </div>
-                <div class="col-md-3 col-xs-3" style="margin-left: 50px">
+                <div class="col-md-12 col-xs-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/mcdonald-s-food-analysis" target="_blank.html">
-                        <img src="images/burger.jpg" class="talk-images" />
-                        <figcaption class="caption" style="left: 60px; font-size: 11px; top: 30px">
-                            Mcdonald's Food Analysis
-                        </figcaption>
+                        Analysis - Mcdonald's Food
                     </a>
                 </div>
-                <div class="col-md-3 col-xs-3" style="margin-left: 50px">
+                <div class="col-md-12 col-xs-12 blog-link">
                     <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
-                        <img src="images/edx.png" class="talk-images" />
-                        <figcaption class="caption" style="left: 3px; font-size: 11px; top: 30px">
-                            Analysis - Online Courses from Harvard and MIT
-                        </figcaption>
+                        Analysis - Online Courses from Harvard and MIT
                     </a>
                 </div>
-                <div class="col-md-3 col-xs-3" style="top: 20px;">
+                <div class="col-md-12 col-xs-12 blog-link">
                     <a href="https://medium.com/@mukultaneja/automated-job-performing-queue-system-using-python-a7e94e4e3526" target="_blank.html">
-                        <img src="images/article.jpg" class="talk-images" />
-                        <figcaption class="caption" style="left: 17px; font-size: 11px; top: 30px">
-                            Automated Job Performing Queue System
-                        </figcaption>
+                        Article - Automated Job Performing Queue System
                     </a>
                 </div>
-			</div>
-		</div>
+                <div class="col-md-12 col-xs-12 blog-link">
+                    <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
+                        Article - Online Courses from Harvard and MIT
+                    </a>
+                </div>
+    		</div>
+        </div>
 	</body>
 </html>
