--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </a>
                 </li>
                 <li>
-                    <a href="#page-content-wrapper" class="main-page">
+                    <a href="https://mukultaneja.github.io/index.html" class="main-page">
                         <span>Home</span>
                     </a>
                 </li>
@@ -70,7 +70,7 @@
             </ul>
         </nav>
         <!-- Page Content -->
-        <div id="page-content-wrapper">
+        <div class="page-content-wrapper">
             <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
                 <span class="hamb-middle"></span>
@@ -79,11 +79,10 @@
             <!-- page header-->
             <div class="container header">
                 <div class="col-md-12 col-xs-12">
-                    <h2 class="text-center">
-                                Mukul Taneja
-                            </h2>
+                    <h2 class="text-center">Mukul Taneja</h2>
+                    <hr />
                 </div>
-                <div class="col-md-12 col-xs-12 circles">
+                <div class="col-md-12 col-xs-12" style="padding-top: 30px">
                     <center>
                         <img src="images/mukul.png" alt="mukul" class="me img-responsive" />
                         <figcaption class="figure-caption tag-class">
@@ -162,8 +161,7 @@
                 <div class="col-md-12 col-xs-12 skills-text">
                     <blockquote>
                         <p>
-                            With the idea of keeping pace with what I do, I have got few opportunities to share my knowledge.
-                            The links below will walk you through the talks I have delivered and the contests i have taken part in.
+                            With the idea of keeping pace with what I do, I have got few opportunities to share my knowledge. The links below will walk you through the talks I have delivered and the contests i have taken part in.
                         </p>
                     </blockquote>
                 </div>
@@ -298,7 +296,6 @@
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/vis.js"></script>
 </body>
