--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <div class="col-md-12 col-xs-12 blog-link">
-                    <a href="https://www.kaggle.com/mukultaneja/which-is-most-popular-harvardx-or-mit" target="_blank.html">
+                    <a href="https://medium.com/@mukultaneja/which-is-the-most-popular-university-harvard-or-mit-53b6a5677d34" target="_blank.html">
                         Article - Online Courses from Harvard and MIT
                     </a>
                 </div>
