updating linkedin name

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="col-md-2 col-xs-2 linkedin">
                         <center>
                             <figure class="figure">
-                                <a href="https://in.linkedin.com/in/mukul-taneja-855b1733" target="_blank">
+                                <a href="https://in.linkedin.com/in/mukultaneja" target="_blank">
                                     <img src="images/linkedin-icon.png" alt="linkedin-icon" class="img-rounded img-responsive" />
                                 </a>
                                 <figcaption class="figure-caption social-class">
