renaming blog.html -> blogs.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="blog.html" target="_blank" class="blogs">
+                    <a href="blogs.html" target="_blank" class="blogs">
                         <span>Blogs</span>
                     </a>
                 </li>
