--- a/analysis/github-repos/index.html
+++ b/analysis/github-repos/index.html
@@ -5,7 +5,7 @@
 	    <meta http-equiv="cache-control" content="max-age=86400" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-	    <link href="/static/css/style.css" rel="stylesheet" />
+	    <link href="static/css/style.css" rel="stylesheet" />
 	</head>
 	<body>
 	    <div class="row page-header">
@@ -35,7 +35,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-	    <script type="text/javascript" src="/static/js/repos.js"></script>
+	    <script type="text/javascript" src="static/js/repos.js"></script>
 	    <script type="text/javascript">
 	    	$('document').ready(function(){
 	    		var date = new Date(),
